Add new tests